projects/mongoexpress-app-with-mongodb/ingress.yaml
# Ingress is still not being used in this project, so ignore this
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: my-service
              servicePort: 8080
